<resources>
    <string name="app_name">Dr Joey</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sing_up">Sing Up</string>

    <string name="sing_out">Sing Out</string>
    <string name="listen_btn">Listen</string>

    <string name="DIALOGFLOW_CLIENT_ACCESS_TOKEN">01d84f168d664928804cabfbf56ce844</string>
    <string name="type_a_message">Type a Message</string>
    <string name="mic_icon_imageview_contentdescription">mic_icon_imageView_contentDescription</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="joey">JOEY</string>
    <string name="dr">DR</string>

    <string name="transition_string">text_transition</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_yet_sign_up_now">Don\'t have account yet? Sign up</string>

    <string name="facebook_app_id">377031042799320</string>
    <string name="fb_login_protocol_scheme">fb377031042799320</string>
    <string name="joey_sing_in_text">Sign In</string>
    <string name="terms_privacy_policy1">By using Dr Joey, you agree to Dr Joeys</string>
    <string name="terms_privacy_policy2">Terms of use and Privacy Policy</string>
    <string name="have_account_sign_in">Have account? Sign in</string>
    <string name="name">Name Ex: Joey Tribbiany</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="title_activity_personality_test">PersonalityTestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="your_personality_type_is">YOUR PERSONALITY TYPE IS:</string>
    <string name="Talk_to_Dr_Joey">Talk to Dr Joey !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_may_know">You May Know</string>
    <string name="home">Home</string>
    <string name="historu">History</string>
    <string name="personality_types">Personality Types</string>
</resources>
